--- a/app/templates/mainView.html
+++ b/app/templates/mainView.html
@@ -1,50 +1,152 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
- 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <meta charset="utf-8">
+  <title>Weather Web Service</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="" name="keywords">
+  <meta content="" name="description">
 
-    <title>WWS - Weather Web Services</title>
-  
+  <!-- Favicons -->
+  <link href="static/img/favicon.png" rel="icon">
+  <link href="static/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
+
+  <!-- Bootstrap CSS File -->
+  <link href="static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Libraries CSS Files -->
+  <link href="static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="static/lib/animate/animate.min.css" rel="stylesheet">
+  <link href="static/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="static/lib/magnific-popup/magnific-popup.css" rel="stylesheet">
+  <link href="static/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+
+  <!-- Main Stylesheet File -->
+  <link href="static/css/style.css" rel="stylesheet">
+
 </head>
 
-<body>
-    <br><br><br>
+<body id="body">
 
-   <div class="container">
-        <h3>Bienvenido {{ session['isLogged'] }} </h3>
+  <header id="header">
+    <div class="container">
 
-        <br>
+      <div id="logo" class="pull-left">
+        <h1><a href="#body" class="scrollto">UNLa<span>Weather</span></a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
+      </div>
 
-        <h3>Clima actual: </h3>
-
-            <h5>{{ current_weather['ciudad'] }}</h5>
-            {{ current_weather['temp'] }}º
-            <h5>{{ current_weather['clima'] }} <img src="http://openweathermap.org/img/w/{{ current_weather['icon'] }}.png"> </h5>
-            
-            <br>
-        
-        <h3>Proximos 5 dias. (Falta procesar estas mediciones para hacer una unica por dia)</h3>
-
-
-        {% for key in forecast %}
-
-            <h5>{{ forecast[key]['hora'] }} <img src="http://openweathermap.org/img/w/{{ forecast[key]['icon'] }}.png"> </h5>
-            Min: {{ forecast[key]['temp_min'] }}º <br>
-            Max: {{ forecast[key]['temp_max'] }}º <br>
-            <br>
-            ---------------------
-      
-        {% endfor %}
-  
-
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+            <li><a href="#">{{ session['isLogged'] }}</a></li>
+            <li><a href="#logout">Salir</a></li>
+        </ul>
+      </nav><!-- #nav-menu-container -->
     </div>
+  </header><!-- #header -->
+
+
+  <main id="main">
+
+
+    <section id="contact" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-header">
+          <h2>Clima actual</h2>
+        </div>
+
+        <div class="row contact-info">
+
+            
+         <div class="col-md-4">
+         </div>
+          <div class="col-md-4">
+            <div class="contact-address">
+              <img src="http://openweathermap.org/img/w/{{ current_weather['icon'] }}.png"> 
+              <h6>{{ current_weather['ciudad'] }}</h6>
+              <address> {{ current_weather['temp'] }}º</address>
+              <address><h6>{{ current_weather['clima'] }}  </h6></address>
+            </div>
+          </div>
+           <div class="col-md-4"></div>
+          
+
+  
+        </div>
+      </div>
+
+
+    </section><!-- #contact -->
+
+
+    <section id="contact" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-header">
+          <h2>Mediciones</h2>
+        </div>
+
+        <div class="row contact-info">
+
+            
+            {% for key in forecast %}
+          <div class="col-md-4">
+            <div class="contact-address">
+               <img src="http://openweathermap.org/img/w/{{ forecast[key]['icon'] }}.png"> 
+              <h6>{{ forecast[key]['hora'] }}</h6>
+              <address> Min: {{ forecast[key]['temp_min'] }}º</address>
+              <address>Max: {{ forecast[key]['temp_max'] }}º</address>
+            </div>
+          </div>
+        {% endfor %}
+
+
+
+      
+        
+          
+
+  
+        </div>
+      </div>
+
+
+    </section><!-- #contact -->
+
+  </main>
+
+  <!--==========================
+    Footer
+  ============================-->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong>UNLa</strong>. All Rights Reserved
+      </div>
+      
+    </div>
+  </footer><!-- #footer -->
+
+  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+
+  <!-- JavaScript Libraries -->
+  <script src="static/lib/jquery/jquery.min.js"></script>
+  <script src="static/lib/jquery/jquery-migrate.min.js"></script>
+  <script src="static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="static/lib/easing/easing.min.js"></script>
+  <script src="static/lib/superfish/hoverIntent.js"></script>
+  <script src="static/lib/superfish/superfish.min.js"></script>
+  <script src="static/lib/wow/wow.min.js"></script>
+  <script src="static/lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="static/lib/magnific-popup/magnific-popup.min.js"></script>
+  <script src="static/lib/sticky/sticky.js"></script>
+
+  <!-- Template Main Javascript File -->
+  <script src="static/js/main.js"></script>
+
 </body>
 </html>
