Se implementa abm de usuario.

--- a/app/templates/forecast.html
+++ b/app/templates/forecast.html
@@ -36,14 +36,14 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#body" class="scrollto">UNLa<span>Weather</span></a></h1>
+        <h1><a href="/home" class="scrollto">UNLa<span>Weather</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-            <li><a href="/home">{{ session['isLogged'] }}</a></li>
+             <li><a href="/home">{{ session['usuario'].usuario }}</a></li>
             <li><a href="/logout">Salir</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
