--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -48,6 +48,7 @@
               <input name="pass" id="password" type="password" placeholder="Clave">
               <button type="submit" id="btnLogin" class="btn">Ingresar</button>
             </form>
+            <a href="/sign_up">Registrarse</a>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
