--- a/app/templates/mainView.html
+++ b/app/templates/mainView.html
@@ -43,7 +43,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-            <li><a href="/home">{{ session['isLogged'] }}</a></li>
+            <li><a href="/home">{{ session['usuario'].usuario }}</a></li>
             <li><a href="/logout">Salir</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -73,6 +73,7 @@
                   <h6>{{ current_weather['ciudad'] }}</h6>
                   <address> {{ current_weather['temp'] }}º</address>
                   <address><h6>{{ current_weather['clima'] }}  </h6></address>
+                  <b><button type="button" class="btn btn-inverse" data-toggle="modal" data-target="#exampleModal">Cambiar ciudad</button></b>
                 </div>
               </div>
 
@@ -122,6 +123,36 @@
     
 
   </main>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <form class="form" action="/change_city" method="POST" id="formLogin"> 
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cambiar ciudad</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <section id="contact">
+        <div class="container">
+            <input type="text" name="ciudad" placeholder="Nueva ciudad">  
+        </div>
+         </section>
+    </div>
+     
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="sumbit" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </form>
+  </div>
+</div>
+
+
 
   {% include 'footer.html' %}
 
