--- a/app/templates/delete_user_view.html
+++ b/app/templates/delete_user_view.html
@@ -28,87 +28,9 @@
   <!-- Main Stylesheet File -->
   <link href="static/css/style.css" rel="stylesheet">
 
- <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"
-         rel = "stylesheet">
-      <script src = "https://code.jquery.com/jquery-1.10.2.js"></script> 
-
- <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-   
-  <script>
-
-    var availableCities = []
-         
-
-i = 0;
-$(document).ready(function(){
-    $("input").keypress(function(){
-        i+=1
-
-        ciudad = document.getElementById('automplete-1').value
-        if(ciudad.length > 2){
-          
-
-          console.log("Se va a buscar: " + ciudad)
-
-           $.ajax({
-                type: "GET",
-                url: "/lookup_city",
-                contentType: 'application/json;charset=UTF-8',
-                data: {'data': ciudad},
-                async: false,
-                success: function (data) {
-
-                  data = data.result
-
-                  availableCities = []
-
-                   for(var i in data)
-                    {
-                        var idCiudad = data[i].idCiudad;
-
-                        var codigo = data[i].codigo_ciudad;
-                         var ciudad = data[i].ciudad;
-
-                         
-                        console.log(idCiudad + " - " +ciudad + ", " + codigo)
-
-                        availableCities.push(idCiudad + " - " + ciudad + ", " + codigo);
-
-
-                    }
-
-                    console.log(availableCities);
-
-                    $(function() {
-                      $( "#automplete-1" ).autocomplete({
-                         source: availableCities
-                      });
-                   });
-
-                    
-                },
-                error : function (xhr, ajaxOptions, thrownError){  
-                  console.log(xhr.status);          
-                  console.log(thrownError);
-                }
-            });
-
-        } 
-    });
-});
-</script>
-   
-
-
 </head>
 
-  
-
 <body id="body">
-
-
-  <!-- HTML --> 
-     
 
   <header id="header">
     <div class="container">
@@ -121,6 +43,8 @@ $(document).ready(function(){
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
+            <li><a href="/home">{{ session['usuario'].usuario }}</a></li>
+            <li><a href="/logout">Salir</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -130,7 +54,8 @@ $(document).ready(function(){
   <main id="main">
 
 
-    <section id="contact" class="wow fadeInUp">
+    
+ <section id="contact" class="wow fadeInUp">
     <div class="container">
       <div class="row">
         <div class="col-md-4"></div>
@@ -138,8 +63,8 @@ $(document).ready(function(){
         <div class="login-register" >
             <div class="login-box card">
                 <div class="card-body">
-                    <form class="form-horizontal form-material" action="/new_user" method="PUT">
-                        <h3 class="box-title m-b-20">Registrarse</h3>
+                    <form class="form-horizontal form-material" action="/delete_user" method="DELETE">
+                        <h3 class="box-title m-b-20">Confirmar baja de usuario</h3>
                         <div class="form-group ">
                             <div class="col-xs-12">
                                 <input value="" class="form-control" name="user" type="text" required="" placeholder="Usuario"> 
@@ -149,31 +74,14 @@ $(document).ready(function(){
                             <div class="col-xs-12">
                                 <input value="" class="form-control" name="pass" type="password" required="" placeholder="Contraseña"> </div>
                         </div>
-
-                        <div class="form-group">
-                            <div class="col-xs-12">
-                               <input id = "automplete-1" class="form-control" type="text" name="ciudad" size="50" placeholder="Ciudad" autocomplete="on">
-                        </div>
-                        <br>
-
                         <div class="form-group text-center m-t-20">
                             <div class="col-xs-12">
-                                <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Registrarse</button>
+                                <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Eliminar usuario</button>
                             </div>
                         </div>
                         <div class="row">
                         </div>
-                        <div class="form-group m-b-0">
-                            <div class="col-sm-12 text-center">
-
-                                {% block body %}
-                                  {% if session['error'] %}
-                                    <div class="alert alert-danger" role="alert">{{session.pop('error')}} </div>
-                                  {% endif %}
-                                {% endblock %}
-
-                            </div>
-                        </div>
+  
                     </form>
                 </div>
             </div>
@@ -186,19 +94,13 @@ $(document).ready(function(){
     </div>
     </section><!-- #contact -->
 
-
-    
   </main>
-
-
-
-
-
-  
 
   {% include 'footer.html' %}
 
-
+  <!-- JavaScript Libraries -->
+  <script src="static/lib/jquery/jquery.min.js"></script>
+  <script src="static/lib/jquery/jquery-migrate.min.js"></script>
   <script src="static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="static/lib/superfish/hoverIntent.js"></script>
   <script src="static/lib/superfish/superfish.min.js"></script>
