--- a/app/templates/delete_user_view.html
+++ b/app/templates/delete_user_view.html
@@ -63,20 +63,20 @@
         <div class="login-register" >
             <div class="login-box card">
                 <div class="card-body">
-                    <form class="form-horizontal form-material" action="/delete_user" method="DELETE">
+                    <form class="form-horizontal form-material" action="/delete_user" method="POST">
                         <h3 class="box-title m-b-20">Confirmar baja de usuario</h3>
                         <div class="form-group ">
                             <div class="col-xs-12">
-                                <input value="" class="form-control" name="user" type="text" required="" placeholder="Usuario"> 
+                                <input value="" class="form-control" name="user" id="user" type="text" required="" placeholder="Usuario"> 
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <input value="" class="form-control" name="pass" type="password" required="" placeholder="Contraseña"> </div>
+                                <input value="" class="form-control" name="pass" id="pass" type="password" required="" placeholder="Contraseña"> </div>
                         </div>
                         <div class="form-group text-center m-t-20">
                             <div class="col-xs-12">
-                                <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Eliminar usuario</button>
+                                <button onclick="borrarUsuario()" class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="button">Eliminar usuario</button>
                             </div>
                         </div>
                         <div class="row">
@@ -96,7 +96,37 @@
 
   </main>
 
+    <script>
+
+function borrarUsuario() {
+   
+    usuario = document.getElementById("user").value;
+    password = document.getElementById("pass").value;
+
+    alert(usuario)
+
+            $.ajax({
+                type: "DELETE",
+                url: "/delete_user",
+                success: function (data) {
+
+                    window.location.replace("/home");
+                    
+                },
+                error : function (xhr, ajaxOptions, thrownError){  
+                  console.log(xhr.status);          
+                  console.log(thrownError);
+                }
+            });
+}
+</script>
+
+
   {% include 'footer.html' %}
+
+
+
+
 
   <!-- JavaScript Libraries -->
   <script src="static/lib/jquery/jquery.min.js"></script>
