--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -41,6 +41,7 @@
 
 i = 0;
 $(document).ready(function(){
+
     $("input").keypress(function(){
         i+=1
 
@@ -97,12 +98,11 @@ $(document).ready(function(){
     });
 });
 </script>
+
    
-
-
 </head>
 
-  
+
 
 <body id="body">
 
@@ -138,27 +138,28 @@ $(document).ready(function(){
         <div class="login-register" >
             <div class="login-box card">
                 <div class="card-body">
-                    <form class="form-horizontal form-material" action="/new_user" method="PUT">
+                    <form class="form" action="/new_user" method="POST" id="formLogin"> 
                         <h3 class="box-title m-b-20">Registrarse</h3>
                         <div class="form-group ">
                             <div class="col-xs-12">
-                                <input value="" class="form-control" name="user" type="text" required="" placeholder="Usuario"> 
+                                <input value="" class="form-control" name="user" id="user" type="text" required="" placeholder="Usuario"> 
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <input value="" class="form-control" name="pass" type="password" required="" placeholder="Contraseña"> </div>
+                                <input value="" class="form-control" name="pass" id="pass" type="password" required="" placeholder="Contraseña"> </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-xs-12">
-                               <input id = "automplete-1" class="form-control" type="text" name="ciudad" size="50" placeholder="Ciudad" autocomplete="on">
+                               <input id = "automplete-1" class="form-control" type="text" name="ciudad"  size="50" placeholder="Ciudad" autocomplete="on" >
                         </div>
                         <br>
 
                         <div class="form-group text-center m-t-20">
                             <div class="col-xs-12">
                                 <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Registrarse</button>
+
                             </div>
                         </div>
                         <div class="row">
@@ -174,8 +175,9 @@ $(document).ready(function(){
 
                             </div>
                         </div>
-                    </form>
+                    
                 </div>
+              </form>
             </div>
         </div>
 
@@ -185,15 +187,8 @@ $(document).ready(function(){
 
     </div>
     </section><!-- #contact -->
-
-
     
   </main>
-
-
-
-
-
   
 
   {% include 'footer.html' %}
